criação da view de report de cliente
